--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --open --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start": "node server/app.js",
     "build": "node build/build.js"
   },
   "dependencies": {
